--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# jwt
+ecommerce.jwt.secret= 0R4NG3T4L3NT5062021
+ecommerce.jwt.expiration=86400000
