Implementa usuario logado adiciona imagem no seu produto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # jwt
 ecommerce.jwt.secret= 0R4NG3T4L3NT5062021
 ecommerce.jwt.expiration=86400000
+
+#server configuration
+server.error.include-message=always
