--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ ecommerce.jwt.expiration=86400000
 
 #server configuration
 server.error.include-message=always
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
